[gd_scene load_steps=5 format=3 uid="uid://bhxale6wueyin"]

[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/UDSEngine/Database_Manager/Theme and Style/main_30.tres" id="1_wgw5n"]
[ext_resource type="Script" path="res://addons/UDSEngine/Event_Manager/Command_List_Forms/PlayerTransfer_EventInputForm.gd" id="2_a1b5a"]
[ext_resource type="PackedScene" uid="uid://ccbd0dxfbgbkm" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/DropDown_Template.tscn" id="3_u4idg"]
[ext_resource type="PackedScene" uid="uid://di34e2qhwmsav" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Vector.tscn" id="4_8dugu"]

[node name="PlayerTransfer_EventInputForm" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1_wgw5n")
script = ExtResource("2_a1b5a")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -163.0
offset_right = 198.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
offset_right = 395.0
offset_bottom = 31.0
text = "Transfer To"
horizontal_alignment = 1

[node name="DropDown_Template" parent="Control/VBoxContainer" instance=ExtResource("3_u4idg")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 35.0
offset_right = 395.0
offset_bottom = 118.0
selection_table_name = "Maps"
label_text = "Map"
is_label_button = false
show_field = true

[node name="OpenMap_Button" type="Button" parent="Control/VBoxContainer"]
offset_top = 122.0
offset_right = 395.0
offset_bottom = 175.0
size_flags_vertical = 3
text = "Select Position in Map"

[node name="Input_Vector" parent="Control/VBoxContainer" instance=ExtResource("4_8dugu")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 179.0
offset_right = 395.0
offset_bottom = 315.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
offset_top = 319.0
offset_right = 395.0
offset_bottom = 373.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Accept" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
offset_right = 195.0
offset_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Accept"

[node name="Cancel" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
offset_left = 199.0
offset_right = 395.0
offset_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"

[connection signal="button_up" from="Control/VBoxContainer/OpenMap_Button" to="." method="_on_open_map_button_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Accept" to="." method="_on_accept_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_button_up"]
